# i2cdev

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  configure.ac  version.h
doc/: i2cinit.cfg  libi2cdev-api
doc/kernel-docs/: fault-codes  i2c-protocol  smbus-protocol
include/: Makefile.am  Makefile.in  busses.h  i2c-bus-lists.h  i2c-dev-parser.h  i2c-dev-path.h  i2c-error.h  i2c-uapi.h  i2cdiscov.h  libi2cdev.h  smbus-dev.h
include/i2c/: smbus.h
libi2cdev/: Makefile.am  Makefile.in  access.c  access.h  common.c  common.h  data.c  data.h  i2c-bus-parser.c  i2c-dev-path.c  i2c-error.c  init.c  libi2cdev.c  smbus-dev.c  smbus.c  sysfs.c  sysfs.h
lsi2c/: Makefile.am  Makefile.in  lsi2c.c
